Fully implemented import and get all vocab